Bug 480254 - Wrong text and icon colors in Power Profiles OSD under Breeze Twilight global theme
Summary: Wrong text and icon colors in Power Profiles OSD under Breeze Twilight global...
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-24 05:10 UTC by Jin Liu
Modified: 2024-05-10 02:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
screenshot (1.55 MB, image/png)
2024-01-24 05:10 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2024-01-24 05:10:53 UTC
Created attachment 165175 [details]
screenshot

See attachment
Comment 1 Nate Graham 2024-02-03 19:17:13 UTC
Can reproduce. Does not affect the KScreen OSD, though.
Comment 2 Nate Graham 2024-02-03 19:17:24 UTC
Likely needs the same fix as Bug 472727.
Comment 3 Jin Liu 2024-02-04 02:05:03 UTC
Adding the "_kirigamiTheme" line as in https://bugs.kde.org/show_bug.cgi?id=472727 doesn't fix it.

Interesting thing is: looks like the powerdevil OSD source code is modified from the kscreen OSD. I compared the two, and they are essentially the same, except missing the above line. I suspect the difference is in how they are launched: kscreen has a desktop file "org.kde.kscreen.desktop", powerdevil not.
Comment 4 Bug Janitor Service 2024-05-01 17:57:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/354
Comment 5 Nicolas Fella 2024-05-06 14:17:58 UTC
Git commit 548e56201fa95f308fb98596cc3c9ce647f9b7fb by Nicolas Fella.
Committed on 06/05/2024 at 14:12.
Pushed by nicolasfella into branch 'master'.

[osd] Force Plasma styling

The OSD should follow the shell colors/styling, not the application styling

M  +2    -0    osd/osd.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/548e56201fa95f308fb98596cc3c9ce647f9b7fb
Comment 6 Nicolas Fella 2024-05-06 14:20:13 UTC
Git commit 839cce0cee203898b2b1d6715daeff50f0726872 by Nicolas Fella.
Committed on 06/05/2024 at 14:20.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[osd] Force Plasma styling

The OSD should follow the shell colors/styling, not the application styling
(cherry picked from commit 548e56201fa95f308fb98596cc3c9ce647f9b7fb)

M  +2    -0    osd/osd.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/839cce0cee203898b2b1d6715daeff50f0726872