[osd] Force Plasma styling

The OSD should follow the shell colors/styling, not the application styling

BUG: 480254